<resources>
    <string name="app_name">Project 7</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="news_app">News App</string>
    <string name="the_guardian_logo">The Guardian Logo</string>
    <string name="search_hint">Search for a Topic</string>
    <string name="top_story">Top Story</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="open_in_browser_icon">Open in Browser Icon</string>
    <string name="empty_return_list">Your Search Return no Results</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="toast_date_message">The From Date cannot be higher than the To Date</string>

    <string name="menu_news">News</string>
    <string name="menu_world">world</string>
    <string name="menu_uk_news">UK News</string>
    <string name="menu_business">Business</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_environment">Environment</string>
    <string name="menu_education">Education</string>
    <string name="menu_science">Science</string>
    <string name="menu_tech">Tech</string>
    <string name="menu_global">Global</string>

    <string name="menu_opinion">Opinion</string>
    <string name="menu_the_guardian_view">The Guardian View</string>

    <string name="menu_sport">Sport</string>
    <string name="menu_football">Football</string>
    <string name="menu_other_sports">Others Sports</string>

    <string name="menu_culture">Culture</string>
    <string name="menu_film">Film</string>
    <string name="menu_music">Music</string>
    <string name="menu_tv_and_radio"><![CDATA[TV & Radio]]></string>
    <string name="menu_books">Books</string>
    <string name="menu_art_and_design"><![CDATA[Art & Design]]></string>
    <string name="menu_games">Games</string>

    <string name="menu_lifestyle">Lifestyle</string>
    <string name="menu_fashion">Fashion</string>
    <string name="menu_life_and_style"><![CDATA[Life & Style]]></string>
    <string name="menu_travel">Travel</string>
    <string name="menu_money">Money</string>
    <string name="menu_society">Society</string>


    <string name="menu_settings">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="empty_default"></string>

    <string name="settings_list_size_label">News List Size</string>
    <string name="settings_list_size_key" translatable="false">list_size</string>
    <string name="settings_list_size_default" translatable="false">10</string>

    <string name="settings_from_date_label">News From Date</string>
    <string name="settings_from_date_key" translatable="false">from_date</string>
    <string name="settings_from_date_default" translatable="false">@string/empty_default</string>

    <string name="settings_to_date_label">News to Date</string>
    <string name="settings_to_date_key" translatable="false">to_date</string>
    <string name="settings_to_date_default" translatable="false">@string/empty_default</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/empty_default</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>


</resources>
