<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_list_size_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_list_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_list_size_label" />

    <com.example.android.project7.DatePreference
        android:defaultValue="@string/settings_from_date_default"
        android:key="@string/settings_from_date_key"
        android:summary="Summary"
        android:title="@string/settings_from_date_label" />

    <com.example.android.project7.DatePreference
        android:defaultValue="@string/settings_to_date_default"
        android:key="@string/settings_to_date_key"
        android:summary="Summary"
        android:title="@string/settings_to_date_label" />

</PreferenceScreen>