<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/menu_news"
            style="@styles/NavMenuGroup">

            <menu>
                <item
                    android:id="@+id/nav_world"
                    android:icon="@drawable/ic_action_globe"
                    android:title="@string/menu_world" />
                <item
                    android:id="@+id/nav_us_news"
                    android:icon="@drawable/ic_action_flag"
                    android:title="@string/menu_us_news" />
                <item
                    android:id="@+id/nav_environment"
                    android:icon="@drawable/ic_action_grow"
                    android:title="@string/menu_environment" />
                <item
                    android:id="@+id/nav_business"
                    android:icon="@drawable/ic_action_business"
                    android:title="@string/menu_business" />
                <item
                    android:id="@+id/nav_tech"
                    android:icon="@drawable/ic_memory"
                    android:title="@string/menu_tech" />
                <item
                    android:id="@+id/nav_science"
                    android:icon="@drawable/ic_action_lab"
                    android:title="@string/menu_science" />
            </menu>

        </item>

        <item android:title="@string/menu_opinion"
            style="@styles/NavMenuGroup">

            <menu>
                <item
                    android:id="@+id/nav_the_guardian_view"
                    android:icon="@drawable/ic_action_news"
                    android:title="@string/menu_the_guardian_view"/>
            </menu>

        </item>

        <item android:title="@string/menu_sport"
            style="@styles/NavMenuGroup">

            <menu>
                <item
                    android:id="@+id/nav_soccer"
                    android:icon="@drawable/ic_action_ball"
                    android:title="@string/menu_soccer"/>
                <item
                    android:id="@+id/nav_other_sports"
                    android:icon="@drawable/ic_action_ball"
                    android:title="@string/menu_other_sports" />
            </menu>

        </item>

        <item android:title="@string/menu_culture"
            style="@styles/NavMenuGroup">

            <menu>
                <item
                    android:id="@+id/nav_film"
                    android:icon="@drawable/ic_action_movie"
                    android:title="@string/menu_film"/>
                <item
                    android:id="@+id/nav_books"
                    android:icon="@drawable/ic_action_book"
                    android:title="@string/menu_books" />
                <item
                    android:id="@+id/nav_music"
                    android:icon="@drawable/ic_action_music_1"
                    android:title="@string/menu_music" />
                <item
                    android:id="@+id/nav_games"
                    android:icon="@drawable/ic_action_joypad"
                    android:title="@string/menu_games" />
            </menu>

        </item>

        <item android:title="@string/menu_lifestyle"
            style="@styles/NavMenuGroup">

            <menu>
                <item
                    android:id="@+id/nav_fashion"
                    android:icon="@drawable/ic_action_tshirt"
                    android:title="@string/menu_fashion"/>
                <item
                    android:id="@+id/nav_life_style"
                    android:icon="@drawable/ic_action_tshirt"
                    android:title="@string/menu_fashion"/>

                <item
                    android:id="@+id/nav_society"
                    android:icon="@drawable/ic_fitness_center"
                    android:title="Society" />
                <item
                    android:id="@+id/nav_travel"
                    android:icon="@drawable/ic_beach_access"
                    android:title="@string/menu_travel" />
            </menu>

        </item>

        <item
            android:id="@+id/nav_empty"
            android:title=""/>

    </group>

</menu>
