<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="4dp">

    <ImageView
        android:contentDescription="@string/thumbnail_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/news_placeholder"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:id="@+id/news_list_thumbnail" />

    <TextView
        android:id="@+id/news_list_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/top_story"
        android:textSize="14sp" />

    <ImageView
        android:contentDescription="@string/open_in_browser_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignEnd="@+id/news_list_thumbnail"
        android:layout_alignTop="@+id/news_list_thumbnail"
        android:src="@drawable/ic_open_in_browser"
        android:id="@+id/main_story_link" />

    <TextView
        android:id="@+id/news_list_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/main_story_link"
        android:layout_toStartOf="@+id/main_story_link"
        android:textSize="12sp" />

</RelativeLayout>